...
    })

    console.log(bufferViewHeight)
    return (
      <View onLayout={this.onLayout} style={{ flex: 1 }}>
        <ScrollView
          testID={'step_content_scrollable'}
          style={{ flex: 1 }}
          showsVerticalScrollIndicator={false}
          automaticallyAdjustContentInsets={false}
          scrollEventThrottle={16}
          onScroll={Animated.event([
            { nativeEvent: { contentOffset: { y: this.state.scrollY } } }
...
