...

const Content = ({ title, subtitle, description, color }: ContentProps) => (
  <View style={styles.stepScreenContent}>
    <StatusBar barStyle="light-content" backgroundColor={color} />
    {subtitle && (
      <Text
        testID={'step_subtitle'}
        style={[
          styles.stepScreenSubtitle,
          {
            color
          }
        ]}
...
