//assignment_scrollable
import { waitFor, element, by } from 'detox';
/**
 * @flow
 */

describe.skip('AssignmentLeadIn', () => {
    it("Should enter Assignment Leadin", async () => {
        await waitFor(element(by.id('login_button'))).toBeVisible().withTimeout(15000);
        await expect(element(by.id('login_button'))).toBeVisible();
        await element(by.id('login_button')).tap();
        await expect(element(by.id('login_button'))).toBeNotVisible();
        await waitFor(element(by.id('step_start_button'))).toBeVisible().withTimeout(15000);
        await element(by.id('step_start_button')).tap();
        await waitFor(element(by.id('step_content_scrollable'))).toExist().withTimeout(15000);
        await element(by.id('step_content_scrollable')).scrollTo('bottom')
        await expect(element(by.id('step_to_assignment_button'))).toBeVisible()
        await element(by.id('step_to_assignment_button')).tap();
        await expect(element(by.id('assignment_scrollable'))).toBeVisible();
    })
});

